# template-python-app

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
notebooks/: 0.1-main.test.ipynb
src/: config.py
src/utils/: __init__.py  check_env_var.py  check_env_variable.py  check_type.py  check_value.py  cli_script_logger.py  ensure_file.py  ensure_path.py  greetings.py  pipeline.py  terminal_colors.py  warnings.py
tests/utils/: test_check_env_variable.py  test_check_type.py  test_check_value.py  test_ensure_file.py  test_ensure_path.py  test_pipeline.py  test_terminal_colors.py  test_warnings.py
