[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "src",
]

[tool.uv.sources]
src = { workspace = true }
